# Simple-ftp

./: CMakeLists.txt  README.md
client/: Makefile  client.cpp
server/: Makefile  server.cpp
